--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <h1>Welcome to Hoa's Website</h1>
     <p id="currentTime"></p>
     <img src="https://raw.githubusercontent.com/Hoanguyen36/mypersonalwebpage1/refs/heads/main/Hoa%20Nguyen.jpg" alt="Hoa Nguyen">
-       <p>Hi, I’m Hoa Nguyen, a computer science major with a passion for coding and all things tech. My journey into CS started with a childhood curiosity about how gadgets worked (and plenty of trial-and-error experiments!). Today, I love the creativity and problem-solving involved in programming, whether I’m building websites, debugging a tricky issue, or exploring algorithms. I’m particularly excited about web development and artificial intelligence, as I see them as gateways to shaping the future in meaningful ways.</p>
-    <p>Outside of my studies, I enjoy blending my love for technology with my other interests. I spend my free time working on personal projects, experimenting with new programming tools, and learning from the tech community online. Beyond coding, I find balance in cooking new recipes and planning travel adventures. For me, computer science isn’t just about writing code—it’s a way to create, innovate, and connect with people worldwide.</p>
+       <p>Hi, I’m Hoa Nguyen, a computer science major with a passion for coding and all things tech. 
+           My journey into CS started with a childhood curiosity about how gadgets worked (and plenty of trial-and-error experiments!). Today, I love the creativity and problem-solving involved in programming, whether I’m building websites, debugging a tricky issue, or exploring algorithms. I’m particularly excited about web development and artificial intelligence, as I see them as gateways to shaping the future in meaningful ways.</p>
+    <p>Outside of my studies, I enjoy blending my love for technology with my other interests. 
+        I spend my free time working on personal projects, experimenting with new programming tools, and learning from the tech community online. Beyond coding, I find balance in cooking new recipes and planning travel adventures. For me, computer science isn’t just about writing code—it’s a way to create, innovate, and connect with people worldwide.</p>
     
     <button id="toggleBackgroundButton">Toggle Background Color</button>
 
